force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/ucinn_ascendv2__Wealth_Rating__c.object-meta.xml
<CustomObject>
    <description>A rating to calculate the giving capacity of a constituent/organization to determine the probability of successful donations.</description>
    <label>Wealth Rating</label>
    <nameField>
        <label>Wealth Rating Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wealth Ratings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>