force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Adjusted_Total_Giving__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Total_Giving__c</fullName>
    <description>Standardize total giving by different data sources.  Take only 5% of giving for WealthPoint OnTime.  Multiply by 5 for Modeled Target Gift Range.</description>
    <formula>Case( Data_Source__c, 
&quot;Blackbaud – WealthPoint OnTime&quot;, 0.05 * ucinn_ascendv2__Estimated_Total_Giving_Capacity__c ,
&quot;Blackbaud – Modeled Target Gift Range&quot;, 5 * ucinn_ascendv2__Estimated_Total_Giving_Capacity__c,
ucinn_ascendv2__Estimated_Total_Giving_Capacity__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Total Giving</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>