force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Annual_Target_Range__c.field-meta.xml
<CustomField>
    <fullName>Annual_Target_Range__c</fullName>
    <description>Used for ISUF</description>
    <label>Annual Target Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$1,000,000+</fullName>
            </value>
            <value>
                <fullName>$500,000 - $999,999</fullName>
            </value>
            <value>
                <fullName>$250,000 - $499,999</fullName>
            </value>
            <value>
                <fullName>$100,000 - $249,999</fullName>
            </value>
            <value>
                <fullName>$50,000 - $99,999</fullName>
            </value>
            <value>
                <fullName>$25,000 - $49,999</fullName>
            </value>
            <value>
                <fullName>$10,000 - $24,999</fullName>
            </value>
            <value>
                <fullName>$5,000 - $9,999</fullName>
            </value>
            <value>
                <fullName>$2,500 - $4,999</fullName>
            </value>
            <value>
                <fullName>$1,000 - $2,499</fullName>
            </value>
            <value>
                <fullName>$500 - $999</fullName>
            </value>
            <value>
                <fullName>$250 - $499</fullName>
            </value>
            <value>
                <fullName>$100 - $249</fullName>
            </value>
            <value>
                <fullName>$50 - $99</fullName>
            </value>
            <value>
                <fullName>$1 - $49</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>