force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Campaign_Gift_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Gift_Estimate__c</fullName>
    <label>Campaign Gift Estimate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$5,000,000+</fullName>
            </value>
            <value>
                <fullName>$1,000,000 - $4,999,999</fullName>
            </value>
            <value>
                <fullName>$500,000 - $999,999</fullName>
            </value>
            <value>
                <fullName>$250,000 - $499,999</fullName>
            </value>
            <value>
                <fullName>$100,000 - $249,999</fullName>
            </value>
            <value>
                <fullName>$50,000 - $99,999</fullName>
            </value>
            <value>
                <fullName>$25,000 - $49,999</fullName>
            </value>
            <value>
                <fullName>$15,000 - $24,999</fullName>
            </value>
            <value>
                <fullName>$10,000 - $14,999</fullName>
            </value>
            <value>
                <fullName>$5,000 - $9,999</fullName>
            </value>
            <value>
                <fullName>$2,500 - $4,999</fullName>
            </value>
            <value>
                <fullName>$1 - $2,499</fullName>
            </value>
            <value>
                <fullName>Unable to rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>