force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <label>Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>01-$25,000,000+</fullName>
            </value>
            <value>
                <fullName>02-$10,000,000+</fullName>
            </value>
            <value>
                <fullName>03-$10,000,000 - $24,999,999</fullName>
            </value>
            <value>
                <fullName>04-$5,000,000+</fullName>
            </value>
            <value>
                <fullName>05-$5,000,000 - $9,999,999</fullName>
            </value>
            <value>
                <fullName>06-$2,500,000 - $4,999,999</fullName>
            </value>
            <value>
                <fullName>07-$1,000,000 - $9,999,999</fullName>
            </value>
            <value>
                <fullName>08-$1,000,000 - $4,999,999</fullName>
            </value>
            <value>
                <fullName>09-$1,000,000 - $2,499,999</fullName>
            </value>
            <value>
                <fullName>10-$500,000 - $999,999</fullName>
            </value>
            <value>
                <fullName>11-$250,000 - $999,999</fullName>
            </value>
            <value>
                <fullName>12-$250,000 - $499,999</fullName>
            </value>
            <value>
                <fullName>13-$100,000 - $249,999</fullName>
            </value>
            <value>
                <fullName>14-$50,000 - $99,999</fullName>
            </value>
            <value>
                <fullName>15-$25,000 - $99,999</fullName>
            </value>
            <value>
                <fullName>16-$25,000 - $49,999</fullName>
            </value>
            <value>
                <fullName>17-$15,000 - $24,999</fullName>
            </value>
            <value>
                <fullName>18-$10,000 - $24,999</fullName>
            </value>
            <value>
                <fullName>19-$10,000 - $14,999</fullName>
            </value>
            <value>
                <fullName>20-$5,000 - $9,999</fullName>
            </value>
            <value>
                <fullName>21-$2,500 - $9,999</fullName>
            </value>
            <value>
                <fullName>22-$2,500 - $4,999</fullName>
            </value>
            <value>
                <fullName>23-$1,000 - $2,499</fullName>
            </value>
            <value>
                <fullName>24-$500 - $999</fullName>
            </value>
            <value>
                <fullName>25-$250 - $499</fullName>
            </value>
            <value>
                <fullName>26-$1 - $2,499</fullName>
            </value>
            <value>
                <fullName>27-Below $2,500</fullName>
            </value>
            <value>
                <fullName>28-Less than $1,000</fullName>
            </value>
            <value>
                <fullName>29-Less than $250</fullName>
            </value>
            <value>
                <fullName>30-Unable to Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>