force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Capacity_Status__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Status__c</fullName>
    <description>Used for ISUF</description>
    <label>Capacity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modeled</fullName>
            </value>
            <value>
                <fullName>Based on Assets</fullName>
            </value>
            <value>
                <fullName>Variable Assets</fullName>
            </value>
            <value>
                <fullName>Research Verified Assets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>