force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Discretionary__c.field-meta.xml
<CustomField>
    <fullName>Discretionary__c</fullName>
    <description>Used for ISUF</description>
    <label>Discretionary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>