force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/GGA_Annual_Gift_Score__c.field-meta.xml
<CustomField>
    <fullName>GGA_Annual_Gift_Score__c</fullName>
    <description>Used for ISUF Wealth Rating 2004 and 2008</description>
    <label>GGA Annual Gift Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$5,000+</fullName>
            </value>
            <value>
                <fullName>$2,500 - $4,999</fullName>
            </value>
            <value>
                <fullName>$1,000 - $2,499</fullName>
            </value>
            <value>
                <fullName>$500 - $999</fullName>
            </value>
            <value>
                <fullName>$100 - $499</fullName>
            </value>
            <value>
                <fullName>Under $100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>