force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/GGA_Major_Gift_Score__c.field-meta.xml
<CustomField>
    <fullName>GGA_Major_Gift_Score__c</fullName>
    <description>Used for ISUF Wealth Rating 2004 and 2008</description>
    <label>GGA Major Gift Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>