force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/GGA_Planned_Gift_Score__c.field-meta.xml
<CustomField>
    <fullName>GGA_Planned_Gift_Score__c</fullName>
    <description>Used for ISUF Wealth Rating 2004 and 2008</description>
    <label>GGA Planned Gift Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Tertiary</fullName>
            </value>
            <value>
                <fullName>No Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>