force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/GGA_PRIZM__c.field-meta.xml
<CustomField>
    <fullName>GGA_PRIZM__c</fullName>
    <description>Used for ISUF Wealth Rating 2004 and 2008</description>
    <label>GGA PRIZM</label>
    <length>4</length>
    <type>Text</type>
</CustomField>