force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Liquidity_Score__c.field-meta.xml
<CustomField>
    <fullName>Liquidity_Score__c</fullName>
    <description>Used for ISUF</description>
    <label>Liquidity Score</label>
    <length>4</length>
    <type>Text</type>
</CustomField>