force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Major_Gift_Capacity_Final__c.field-meta.xml
<CustomField>
    <fullName>Major_Gift_Capacity_Final__c</fullName>
    <description>Used for ISUF</description>
    <label>Major Gift Capacity Final</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$5,000,000+</fullName>
            </value>
            <value>
                <fullName>$2,500,000 - $4,999,999</fullName>
            </value>
            <value>
                <fullName>$1,000,000 - $2,499,999</fullName>
            </value>
            <value>
                <fullName>$500,000 - $999,999</fullName>
            </value>
            <value>
                <fullName>$250,000 - $499,999</fullName>
            </value>
            <value>
                <fullName>$100,000 - $249,999</fullName>
            </value>
            <value>
                <fullName>$50,000 - $99,999</fullName>
            </value>
            <value>
                <fullName>$25,000 - $49,999</fullName>
            </value>
            <value>
                <fullName>$10,000 - $24,999</fullName>
            </value>
            <value>
                <fullName>$5,000 - $9,999</fullName>
            </value>
            <value>
                <fullName>$2,500 - $4,999</fullName>
            </value>
            <value>
                <fullName>$1,000 - $2,499</fullName>
            </value>
            <value>
                <fullName>$500 - $999</fullName>
            </value>
            <value>
                <fullName>$250 - $499</fullName>
            </value>
            <value>
                <fullName>Less than $250</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>