force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Major_Gift_Likelihood_Code__c.field-meta.xml
<CustomField>
    <fullName>Major_Gift_Likelihood_Code__c</fullName>
    <description>Populated from Major Gift Likelihood</description>
    <formula>CASE( Major_Gift_Score__c, &quot;900+&quot;,1,
&quot;800 - 899&quot;,2,
&quot;700 - 799&quot;,3,
&quot;600 - 699&quot;,4,
&quot;500 - 599&quot;,5,
&quot;400 - 499&quot;,6,
&quot;300 - 399&quot;,7,
&quot;200 - 299&quot;,8,
&quot;100 - 199&quot;,9,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Populated from Major Gift Likelihood</inlineHelpText>
    <label>Major Gift Likelihood Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>