force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Major_Gift_Likelihood_Score__c.field-meta.xml
<CustomField>
    <fullName>Major_Gift_Likelihood_Score__c</fullName>
    <description>Used for ISUF</description>
    <label>Major Gift Likelihood Score</label>
    <length>4</length>
    <type>Text</type>
</CustomField>