force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Major_Gift_Value__c.field-meta.xml
<CustomField>
    <fullName>Major_Gift_Value__c</fullName>
    <description>Used for ISUF</description>
    <label>Major Gift Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>