force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Managed_Jan_2013__c.field-meta.xml
<CustomField>
    <fullName>Managed_Jan_2013__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for ISUF Wealth Rating 2013</description>
    <label>Managed Jan 2013</label>
    <type>Checkbox</type>
</CustomField>