force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Managed_June_2017__c.field-meta.xml
<CustomField>
    <fullName>Managed_June_2017__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for ISUF Wealth Rating 2017</description>
    <label>Managed June 2017</label>
    <type>Checkbox</type>
</CustomField>