force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Match_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Match_Confidence__c</fullName>
    <label>Match Confidence</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>