force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>Net_Worth__c</fullName>
    <description>Used for ISUF</description>
    <label>Net Worth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>