force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Planned_Gift_Likelihood__c.field-meta.xml
<CustomField>
    <fullName>Planned_Gift_Likelihood__c</fullName>
    <label>Planned Gift Likelihood</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>900+</fullName>
            </value>
            <value>
                <fullName>800-899</fullName>
            </value>
            <value>
                <fullName>700-799</fullName>
            </value>
            <value>
                <fullName>600-699</fullName>
            </value>
            <value>
                <fullName>500-599</fullName>
            </value>
            <value>
                <fullName>400-499</fullName>
            </value>
            <value>
                <fullName>300-399</fullName>
            </value>
            <value>
                <fullName>200-299</fullName>
            </value>
            <value>
                <fullName>100-199</fullName>
            </value>
            <value>
                <fullName>100 - 199</fullName>
                <isActive>false</isActive>
                <label>100 - 199</label>
            </value>
            <value>
                <fullName>200 - 299</fullName>
                <isActive>false</isActive>
                <label>200 - 299</label>
            </value>
            <value>
                <fullName>300 - 399</fullName>
                <isActive>false</isActive>
                <label>300 - 399</label>
            </value>
            <value>
                <fullName>400 - 499</fullName>
                <isActive>false</isActive>
                <label>400 - 499</label>
            </value>
            <value>
                <fullName>500 - 599</fullName>
                <isActive>false</isActive>
                <label>500 - 599</label>
            </value>
            <value>
                <fullName>600 - 699</fullName>
                <isActive>false</isActive>
                <label>600 - 699</label>
            </value>
            <value>
                <fullName>700 - 799</fullName>
                <isActive>false</isActive>
                <label>700 - 799</label>
            </value>
            <value>
                <fullName>800 - 899</fullName>
                <isActive>false</isActive>
                <label>800 - 899</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>