force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Planned_Gift_Score__c.field-meta.xml
<CustomField>
    <fullName>Planned_Gift_Score__c</fullName>
    <description>Used for ISUF Wealth Rating 2013</description>
    <label>Planned Gift Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>100 - 199</fullName>
            </value>
            <value>
                <fullName>200 - 299</fullName>
            </value>
            <value>
                <fullName>300 - 399</fullName>
            </value>
            <value>
                <fullName>400 - 499</fullName>
            </value>
            <value>
                <fullName>500 - 599</fullName>
            </value>
            <value>
                <fullName>600 - 699</fullName>
            </value>
            <value>
                <fullName>700 - 799</fullName>
            </value>
            <value>
                <fullName>800 - 899</fullName>
            </value>
            <value>
                <fullName>900+</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>