force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Rating_Status__c.field-meta.xml
<CustomField>
    <fullName>Rating_Status__c</fullName>
    <description>Used for ISUF</description>
    <label>Rating Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Historical</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>