force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Research_Code__c.field-meta.xml
<CustomField>
    <fullName>Research_Code__c</fullName>
    <label>Research Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top Prospect</fullName>
            </value>
            <value>
                <fullName>Nothing to Lose Prospect</fullName>
            </value>
            <value>
                <fullName>Mid-Level Prospect</fullName>
            </value>
            <value>
                <fullName>Planned Gift Prospect</fullName>
            </value>
            <value>
                <fullName>Not a Prospect</fullName>
            </value>
            <value>
                <fullName>Nothing to Lose</fullName>
                <isActive>false</isActive>
                <label>Nothing to Lose</label>
            </value>
            <value>
                <fullName>Potential Future/Planned Gift Prospect</fullName>
                <isActive>false</isActive>
                <label>Potential Future/Planned Gift Prospect</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>