force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Source_Date__c.field-meta.xml
<CustomField>
    <fullName>Source_Date__c</fullName>
    <description>Date of when the rating score was created or modified.</description>
    <inlineHelpText>Date of when the rating score was created or modified.</inlineHelpText>
    <label>Source Date</label>
    <type>Date</type>
</CustomField>