force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Spouse__c.field-meta.xml
<CustomField>
    <fullName>Spouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spouse</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Wealth Ratings (Spouse)</relationshipLabel>
    <relationshipName>Wealth_Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>