force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/TA_Major_Gift_Cap__c.field-meta.xml
<CustomField>
    <fullName>TA_Major_Gift_Cap__c</fullName>
    <description>Used for ISUF Wealth Rating 2017</description>
    <label>Vendor Original Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Code</fullName>
                <default>true</default>
                <label>No Code</label>
            </value>
            <value>
                <fullName>$25,000,000+</fullName>
            </value>
            <value>
                <fullName>$10,000,000 - $24,999,999</fullName>
            </value>
            <value>
                <fullName>$5,000,000 - $9,999,999</fullName>
            </value>
            <value>
                <fullName>$2,500,000 - $4,999,999</fullName>
            </value>
            <value>
                <fullName>$1,000,000 - $2,499,999</fullName>
            </value>
            <value>
                <fullName>$250,000 - $999,999</fullName>
            </value>
            <value>
                <fullName>$100,000 - $249,999</fullName>
            </value>
            <value>
                <fullName>$50,000 - $99,999</fullName>
            </value>
            <value>
                <fullName>$25,000 - $49,999</fullName>
            </value>
            <value>
                <fullName>$10,000 - $24,999</fullName>
            </value>
            <value>
                <fullName>$5,000 - $9,999</fullName>
            </value>
            <value>
                <fullName>$2,500 - $4,999</fullName>
            </value>
            <value>
                <fullName>$1,000 - $2,499</fullName>
            </value>
            <value>
                <fullName>Less than $1,000</fullName>
            </value>
            <value>
                <fullName>1-$25,000,000+</fullName>
            </value>
            <value>
                <fullName>2-$10,000,000 - $24,999,999</fullName>
            </value>
            <value>
                <fullName>3-$5,000,000 - $9,999,999</fullName>
            </value>
            <value>
                <fullName>4-$2,500,000 - $4,999,999</fullName>
            </value>
            <value>
                <fullName>5-$1,000,000 - $2,499,999</fullName>
            </value>
            <value>
                <fullName>6-$250,000 - $999,999</fullName>
            </value>
            <value>
                <fullName>7-$100,000 - $249,999</fullName>
            </value>
            <value>
                <fullName>8-$50,000 - $99,999</fullName>
            </value>
            <value>
                <fullName>9-$25,000 - $49,999</fullName>
            </value>
            <value>
                <fullName>A-$10,000 - $24,999</fullName>
            </value>
            <value>
                <fullName>B-$5,000 - $9,999</fullName>
            </value>
            <value>
                <fullName>C-$2,500 - $4,999</fullName>
            </value>
            <value>
                <fullName>D-$1,000 - $2,499</fullName>
            </value>
            <value>
                <fullName>E-Less than $1,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>