force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/TA_Major_Gift_Capacity_Code__c.field-meta.xml
<CustomField>
    <fullName>TA_Major_Gift_Capacity_Code__c</fullName>
    <description>Dependent Picklist of TA Major Gift Capacity</description>
    <label>TA Major Gift Capacity Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TA_Major_Gift_Cap__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Major_Gift_Code</valueSetName>
    </valueSet>
</CustomField>