force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/Total_Confirmed_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Confirmed_Assets__c</fullName>
    <description>Used for ISUF</description>
    <label>Total Confirmed Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>