force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Wealth Ratings</relationshipLabel>
    <relationshipName>Wealth_Ratings_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>