force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__Estimated_Total_Giving_Capacity__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Estimated_Total_Giving_Capacity__c</fullName>
    <inlineHelpText>WealthEngine Estimated Total Giving Capacity</inlineHelpText>
    <label>Estimated Total Giving Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>