force-app/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__Fundraiser_Tier_Donorscape_Affinity__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fundraiser_Tier_Donorscape_Affinity__c</fullName>
    <label>Fundraiser Tier / Donorscape Affinity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>